
BSPLINE_ITERFIT: Set all the SSET.BKMASK=1 (good) for the case that the break
               points are passed through the OLDSET keyword.
REBIN_SPECTRUM: New function for rebinning 1-D spectra using CIC assignment
               and arbitrary pixel boundaries.
TRACESET_TRIM: New function for trimming trace sets to selected traces.

bin/Makefile: Should have "-n32" instead of "-32" in the X_FFLAGS
               for the IRIX64 platform, to avoid inconsistencies with
               the other compiler flags.
src/image/Makefile: Change some of the comment lines, since for some bizarre
               reason those comment lines that end in a backslash will crash
               on the SGI IRIX platform.

-------------------------------------------------------------------------------
v4_10_8 (Jan 4, 2004)
Tagged for sirtf v0_0_2

GAUSS_OVERLAP: New function to calculate log integral, covariance, and
               mean of product of two gaussians.
NW_RGB_MAKE: Top-level routine for making color images from 3 color images.

bin/evilmake: Add "LDF77=g77" or "LDF77=ld", and export it.
scr/idlmangle/Makefile: Change of $(FC) -> $(LDF77) on link line, so
               that this builds on a Mac where "ld" is used instead
               of "g77" for linking.
src/mangle1.4/src/garea.s.f: Bug fix to send errors to stderr.  We had errors
               like "*** from garea: total failure at tol =  3.33161425"
               spilling into the output stream from the Fortran code back
               into IDL, which was corrupting the data.  (Blanton thinks
               this is triggered from balkans with zero area.)

-------------------------------------------------------------------------------
v4_10_7 (Dec 11, 2003)
Tagged for idlspec2d v4_10_7.

Directory pro/rgbcolor added to support making color (RGB) images.
Directory pro/healpix added to support atv display of healpix maps.

ALM2HEALPIX,DPF_NEST2RING,DPF_PIX2ANG_RING,HEAL_REBIN,